# weekly-cycle-oura-skill

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  LICENSING.md  OURA-API-DECISIONS.md  README.md  architecture.html  config.yaml.example  design.md  index.html  oura-api-decisions.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  architecture.html  index.html  oura-api-decisions.md
src/: __init__.py  cli.py  event_manager.py  features.py  mcp_server.py  oura_client.py  pipeline.py  recommendation_engine.py  rule_engine.py
tests/post_mvp/: test_cli.py
tests/unit/: conftest.py  test_cli.py  test_event_manager.py  test_features.py  test_mcp_server.py  test_oura_client.py  test_pipeline.py  test_rec_engine.py  test_rule_engine.py
